Use valueOf instead of Character constructor.  Findbugs says it's more efficient.